--- a/custom_components/load_shedding/translations/en.json
+++ b/custom_components/load_shedding/translations/en.json
@@ -5,25 +5,16 @@
             "cannot_connect": "Failed to connect"
         },
         "error": {
-            "cannot_connect": "Failed to connect"
+            "cannot_connect": "Failed to connect",
+            "no_results_found": "No results found.  Try a different suburb with the same schedule.",
+            "provider_error": "Unable to reach Provider.  See Logs for details."
         },
         "step": {
             "search": {
                 "data": {
+                    "provider": "Provider",
                     "province": "Province",
-                    "search": "Search",
-                    "suburb": "Suburb",
-                    "suburb_id": "Suburb ID"
-                },
-                "description": "Search your suburb name, e.g. Milnerton, then select your suburb ID from the dropdown."
-            }
-        }
-    },
-    "options": {
-        "step": {
-            "search": {
-                "data": {
-                    "province": "Province",
+                    "results": "Results",
                     "search": "Search",
                     "suburb": "Suburb",
                     "suburb_id": "Suburb ID"
