Fix bugs and add quota sensor

--- a/custom_components/load_shedding/translations/en.json
+++ b/custom_components/load_shedding/translations/en.json
@@ -31,10 +31,9 @@
             },
             "sepush": {
                 "data": {
-                    "api_key": "API Key / Token",
-                    "coct_stage": "City of Cape Town Stages"
+                    "api_key": "API Key / Token"
                 },
-                "description": ""
+                "description": "Request an [Eskom Se Push API Key](https://docs.google.com/forms/d/e/1FAIpQLSeZhAkhDaQX_mLT2xn41TkVjLkOH3Py3YWHi_UqQP4niOY01g/viewform)  \nSelect '< 50' requests and 'data serialization' for the Test."
             }
         }
     }
