Update lib version and misc fixes

--- a/custom_components/load_shedding/translations/en.json
+++ b/custom_components/load_shedding/translations/en.json
@@ -8,7 +8,11 @@
             "cannot_connect": "Failed to connect",
             "no_provider": "No provider selected.",
             "no_results_found": "No results found.  Try searching for a different area with the same schedule as yours or choose a different provider.",
-            "provider_error": "Unable to reach Provider.  See Logs for details."
+            "provider_error": "Unable to reach Provider.  See Logs for details.",
+            "sepush_400": "Bad request. Create a issue for the integration and include logs.",
+            "sepush_403": "Invalid API Key / Token",
+            "sepush_429": "Token quota exceeded",
+            "sepush_500": "SePush server unavailable"
         },
         "step": {
             "lookup_areas": {
@@ -33,7 +37,23 @@
                 "data": {
                     "api_key": "API Key / Token"
                 },
-                "description": "Request an [Eskom Se Push API Key](https://docs.google.com/forms/d/e/1FAIpQLSeZhAkhDaQX_mLT2xn41TkVjLkOH3Py3YWHi_UqQP4niOY01g/viewform)  \nSelect '< 50' requests and 'data serialization' for the Test."
+                "description": "Request an API Key / Token from [Eskom Se Push](https://docs.google.com/forms/d/e/1FAIpQLSeZhAkhDaQX_mLT2xn41TkVjLkOH3Py3YWHi_UqQP4niOY01g/viewform)  \n**How do you plan to use it?** Home Automations\n**Estimated request count per day** < 50\n**Test: If someone was talking about Jason, in the context of an API, they'd be talking about:** data serialization"
+            }
+        }
+    },
+    "options": {
+        "step": {
+            "lookup_areas": {
+                "data": {
+                    "area": "Area",
+                    "area_id": "Area",
+                    "default_schedule": "Default Schedule",
+                    "provider": "Provider",
+                    "province": "Province",
+                    "results": "Results",
+                    "search": "Search"
+                },
+                "description": "Search your area name, e.g. Milnerton, then select your area ID from the results."
             }
         }
     }
