Add config options to set min event duration

--- a/custom_components/load_shedding/translations/en.json
+++ b/custom_components/load_shedding/translations/en.json
@@ -57,6 +57,7 @@
                 "data": {
                     "add_area": "Add area",
                     "delete_area": "Remove area",
+                    "min_event_duration": "Min. event duration (mins)",
                     "multi_stage_events": "Multi-stage events",
                     "setup_api": "Configure API"
                 },
