--- a/custom_components/load_shedding/translations/en.json
+++ b/custom_components/load_shedding/translations/en.json
@@ -42,7 +42,28 @@
         }
     },
     "options": {
+        "error": {
+            "cannot_connect": "Failed to connect",
+            "no_provider": "No provider selected.",
+            "no_results_found": "No results found.  Try searching for a different area with the same schedule as yours or choose a different provider.",
+            "provider_error": "Unable to reach Provider.  See Logs for details.",
+            "sepush_400": "Bad request. Create a issue for the integration and include logs.",
+            "sepush_403": "Invalid API Key / Token",
+            "sepush_429": "Token quota exceeded",
+            "sepush_500": "SePush server unavailable"
+        },
         "step": {
+            "init": {
+                "data": {
+                    "add_area": "Add area",
+                    "delete_area": "Remove area",
+                    "min_event_duration": "Min. event duration (mins)",
+                    "multi_stage_events": "Multi-stage events",
+                    "setup_api": "Configure API"
+                },
+                "description": "Please select the desired action.",
+                "title": "Load Shedding Configuration"
+            },
             "lookup_areas": {
                 "data": {
                     "area": "Area",
@@ -54,6 +75,12 @@
                     "search": "Search"
                 },
                 "description": "Search your area name, e.g. Milnerton, then select your area ID from the results."
+            },
+            "sepush": {
+                "data": {
+                    "api_key": "API Key / Token"
+                },
+                "description": "Get a Free (50 requests per day) API Key from [Eskom Se Push](https://eskomsepush.gumroad.com/l/api)."
             }
         }
     }
